--- a/index.html
+++ b/index.html
@@ -6,258 +6,147 @@
   <meta name="theme-color" content="#0b0b0f" />
   <meta name="color-scheme" content="dark" />
   <title>SwamiG Institute — Mini 4-Week Obi Pele (Clink) Certification | 30+ Hours</title>
-  <meta name="description" content="Mini 4-week, 30+ hour Obi Pele (Clink) certification with daily casting logs, weekly Zooms, in-person practicum, and certification ceremony.">
+  <meta name="description" content="Mini 4-week, 30+ hour Obi Pele (Clink) certification with daily casting logs, weekly Zooms, an in-person practicum, and a certification ceremony.">
   <style>
-    :root{
-      --bg:#0b0b0f;
-      --ink:#eaeaf2;
-      --muted:#b5b5c4;
-      --accent:#bb66ff;
-      --accent-muted:rgba(187,102,255,.18);
-      --accent-lineage:rgba(102,255,178,.35);
-      --radius:20px;
-      --shadow:0 10px 30px rgba(0,0,0,.35)
-    }
+    :root{--bg:#0b0b0f;--ink:#eaeaf2;--muted:#b5b5c4;--accent:#bb66ff;--radius:20px;--shadow:0 10px 30px rgba(0,0,0,.35)}
     *{box-sizing:border-box}
     html,body{scroll-behavior:smooth}
-    body{margin:0;font:400 16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;background:radial-gradient(1200px 600px at 15% 10%, rgba(102,255,178,.07), transparent 60%), var(--bg);color:var(--ink)}
+    body{
+      margin:0;
+      font:400 16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;
+      background:radial-gradient(1200px 600px at 15% 10%, rgba(102,255,178,.07), transparent 60%), var(--bg);
+      color:var(--ink)
+    }
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
     .wrap{max-width:1100px;margin:0 auto;padding:28px 18px 80px}
-    header{position:sticky;top:0;backdrop-filter:blur(8px);background:linear-gradient(180deg, rgba(11,11,15,.85), rgba(11,11,15,.65));border-bottom:1px solid rgba(255,255,255,.06);z-index:5}
-    header .bar{display:flex;gap:16px;align-items:center;justify-content:space-between;padding:12px 18px;max-width:1100px;margin:0 auto}
-    .logo-mark{position:fixed;right:14px;bottom:14px;opacity:.4;filter:drop-shadow(0 6px 12px rgba(0,0,0,.4));z-index:1}
-    .logo-mark img{width:72px;height:auto;border-radius:12px}
-    .hero{display:grid;grid-template-columns:1.1fr .9fr;gap:26px;align-items:center;margin:24px 0 10px}
-    .h1{font-weight:700;font-size:clamp(28px,4.2vw,44px);line-height:1.15;margin:0 0 10px}
-    .lead{color:var(--muted);font-size:clamp(16px,2.2vw,18px)}
+
+    header{position:sticky;top:0;z-index:10;backdrop-filter:blur(8px);background:linear-gradient(180deg, rgba(11,11,15,.92), rgba(11,11,15,.78));border-bottom:1px solid rgba(255,255,255,.06)}
+    .bar{display:flex;align-items:center;justify-content:space-between;padding:10px 18px;max-width:1100px;margin:0 auto}
+    .brand{display:flex;align-items:center;gap:12px}
+    .brand img{height:44px;width:auto;border-radius:10px}
+    .brand .title{font-weight:700;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+    nav a{color:var(--muted)}
+    nav a + a::before{content:" · ";color:var(--muted)}
+    @media (max-width:640px){.brand .title{display:none}}
+
     .card{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:var(--radius);box-shadow:var(--shadow)}
-    .badge{display:inline-block;padding:6px 10px;border-radius:999px;background:var(--accent-muted);border:1px solid rgba(187,102,255,.4);color:#eeddff;font-weight:600;font-size:12px;letter-spacing:.3px}
-    .cta{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
     .btn{display:inline-block;padding:12px 16px;border-radius:12px;border:1px solid rgba(255,255,255,.14);background:linear-gradient(180deg, rgba(187,102,255,.22), rgba(187,102,255,.12));color:#fff;font-weight:700}
     .btn.secondary{background:transparent}
-    .pill{padding:8px 10px;border-radius:999px;background:rgba(255,255,255,.05);border:1px solid rgba(255,255,255,.08);font-size:13px}
-    .grid{display:grid;gap:18px}
-    .grid.cols-3{grid-template-columns:repeat(3,1fr)}
-    .grid.cols-2{grid-template-columns:repeat(2,1fr)}
-    @media (max-width:900px){.hero{grid-template-columns:1fr}.grid.cols-3{grid-template-columns:1fr}.grid.cols-2{grid-template-columns:1fr}}
-    .kpi{padding:16px}
-    .kpi b{font-size:22px}
+    .cta{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
     section{margin:34px 0}
+    h1{font-size:clamp(28px,4.2vw,44px);line-height:1.15;margin:12px 0}
     h2{font-size:clamp(22px,3.2vw,28px);margin:0 0 12px}
     h3{font-size:18px;margin:0 0 10px}
-    .note{font-size:14px;color:var(--muted)}
-    table{width:100%;border-collapse:separate;border-spacing:0 10px}
-    th,td{padding:12px 14px;text-align:left;vertical-align:top;border:1px solid rgba(255,255,255,.08)}
+    ul{margin:0 0 0 20px;padding:0;list-style:disc}
+    li{margin:6px 0}
+    .lead{color:var(--muted)}
+    .grid{display:grid;gap:18px}
+    .grid.cols-2{grid-template-columns:repeat(2,1fr)}
+    @media (max-width:900px){.grid.cols-2{grid-template-columns:1fr}}
+    .dim{color:var(--muted)}
+    .kpi{padding:16px}
+    .kpi b{font-size:22px}
+    table{width:100%;border-collapse:collapse}
+    th,td{padding:12px 14px;text-align:left;border:1px solid rgba(255,255,255,.08)}
     th{background:rgba(255,255,255,.06)}
     td{background:rgba(255,255,255,.03)}
+    .hero-img{width:100%;height:auto;border-radius:16px;border:1px solid rgba(255,255,255,.08);box-shadow:var(--shadow)}
+    .gallery img{max-width:180px;width:100%;height:auto;border-radius:12px;border:1px solid rgba(255,255,255,.08);margin:6px}
     .foot{margin-top:34px;padding:18px;border-top:1px solid rgba(255,255,255,.08);color:var(--muted);font-size:14px}
-    .ribbon{border-left:4px solid var(--accent);padding-left:12px}
-    .chip{display:inline-flex;gap:8px;align-items:center}
-    .ok{width:8px;height:8px;border-radius:50%;background:linear-gradient(180deg,#7CFFB2,#02C48A);box-shadow:0 0 0 3px rgba(2,196,138,.18)}
-    .warning{width:8px;height:8px;border-radius:50%;background:linear-gradient(180deg,#FFD27C,#D4A602);box-shadow:0 0 0 3px rgba(212,166,2,.18)}
-    .danger{width:8px;height:8px;border-radius:50%;background:linear-gradient(180deg,#FF8A8A,#D73A49);box-shadow:0 0 0 3px rgba(215,58,73,.18)}
-    .ul{margin:8px 0 0 18px;color:var(--muted)}
-    .ul li{margin:6px 0}
-    .dim{color:var(--muted)}
   </style>
 </head>
 <body>
-  <!-- subtle off-centered small logo mark -->
-  <aside class="logo-mark" aria-hidden="true">
-    <img src="http://swamiginstitute.github.io/SwamiG.gif" alt="SwamiG Institute logo">
-  </aside>
-
   <header>
     <div class="bar">
-      <div class="chip"><span class="ok"></span><span>SwamiG Institute</span></div>
-      <nav class="dim">
-        <a href="#syllabus">Syllabus</a> ·
-        <a href="#requirements">Requirements</a> ·
+      <div class="brand">
+        <img src="SwamiG.gif" alt="SwamiG Institute logo">
+        <div class="title">SwamiG Institute</div>
+      </div>
+      <nav>
+        <a href="#overview">Overview</a>
+        <a href="#syllabus">Syllabus</a>
+        <a href="#gallery">Image Gallery</a>
         <a href="#apply">Apply</a>
       </nav>
     </div>
   </header>
 
   <main class="wrap">
-    <section class="hero">
-      <div>
-        <div class="badge">Mini 4-Week • 30+ Hours • Cohort-Based</div>
-        <h1 class="h1">Obi Pele (Clink) Certification</h1>
-        <p class="lead">Daily casting-log practice, weekly live Zoom sessions, an in-person practicum, and a formal certification ceremony. Learn mechanics, corpus, ethics, and confident delivery of readings.</p>
-        <div class="cta">
-          <a class="btn" href="#apply">Apply Now</a>
-          <a class="btn secondary" href="#syllabus">View Syllabus</a>
-          <span class="pill">Contact: <a href="mailto:Baba@SwamiGInstitute.com">Baba@SwamiGInstitute.com</a></span>
-        </div>
-        <p class="note">Obi Pele (Clink) is a SwamiG Institute implement, blending Obi, Four-Cowrie, and Obi Abata modalities. </p>
-      </div>
-      <div class="card kpi">
-        <div class="grid cols-2">
-          <div>
-            <b>30+ hrs</b><br><span class="dim">contact hours (4 weeks)</span>
-          </div>
-          <div>
-            <b>Daily</b><br><span class="dim">casting-log submissions</span>
-          </div>
-          <div>
-            <b>4 Zooms</b><br><span class="dim">weekly 90-min live sessions</span>
-          </div>
-          <div>
-            <b>Practicum</b><br><span class="dim">in-person skills check</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section id="overview">
-      <div class="card" style="padding:18px">
-        <h2>What You’ll Learn</h2>
-        <ul class="ul">
-          <li>Mechanics of Obi Pele (Clink): forms (Obi/4-Cowrie, Four-Cowrie, Obi Abata), valid responses, casting protocol.</li>
-          <li>Corpus & Interpretation: 5 primary responses (Oyeku, Okana, Ejife, Etawa, Ogbe) and 9 scenario variations; framing queries and outcomes.</li>
-          <li>Ethics & Cultural Respect: roles, boundaries, and responsibilities of a diviner.</li>
-          <li>Professional Delivery: intake, note-taking, and clear client communication.</li>
-        </ul>
+      <h1>Mini 4-Week Obi Pele (Clink) Certification</h1>
+      <p class="lead">30+ hours – daily casting logs, 4 weekly Zooms, an in-person practicum, and a certification ceremony.</p>
+
+      <!-- HERO IMAGE -->
+      <img class="hero-img" src="obi1.jpg" alt="Obi Pele casting implements on mat">
+
+      <div class="grid cols-2" style="margin-top:16px">
+        <div class="card kpi">
+          <div class="grid cols-2">
+            <div><b>30+ hrs</b><br><span class="dim">contact hours</span></div>
+            <div><b>Daily</b><br><span class="dim">casting logs</span></div>
+            <div><b>4 Zooms</b><br><span class="dim">90-min weekly</span></div>
+            <div><b>Practicum</b><br><span class="dim">in-person skills check</span></div>
+          </div>
+        </div>
+        <div class="card" style="padding:16px">
+          <h3>What you’ll learn</h3>
+          <ul>
+            <li>Mechanics of Obi Pele (Clink): forms, valid responses, protocol.</li>
+            <li>Corpus and interpretation: 5 primary responses + 9 scenario variations.</li>
+            <li>Ethics and cultural respect: roles, boundaries, responsibilities.</li>
+            <li>Professional delivery: intake, notes, clear client communication.</li>
+          </ul>
+          <div class="cta"><a class="btn" href="#apply">Apply Now</a><a class="btn secondary" href="#syllabus">View Syllabus</a></div>
+        </div>
       </div>
     </section>
 
     <section id="syllabus">
       <h2>4-Week Syllabus (Mini — 30+ Hours)</h2>
-
-      <div class="card" style="padding:18px">
-        <h3 class="ribbon">Daily Practice & Logs (All Weeks)</h3>
-        <p class="dim">Submit a casting log each day (date, question, result, brief interpretation). Daily review/feedback. Target: 7–12 casts/day (≈ 210–350 total casts over 4 weeks).</p>
-        <ul class="ul">
-          <li>Log fields: <em>Date</em> • <em>Question</em> • <em>Cast/Response</em> • <em>Interpretation</em> • <em>Notes</em>.</li>
-          <li>Upload via shared Google Sheet/Drive folder (provided on enrollment).</li>
+      <div class="card" style="padding:18px;margin-bottom:18px">
+        <h3>Daily practice and casting logs (all weeks)</h3>
+        <p class="dim">Submit a casting log each day. Target: 7–12 casts/day (≈210–350 total across 4 weeks).</p>
+        <ul>
+          <li>Log fields: Date, Question, Cast/Response, Interpretation, Notes.</li>
+          <li>Upload via shared Google Sheet/Drive folder.</li>
         </ul>
       </div>
+    </section>
 
-      <div class="grid cols-2">
-        <div class="card" style="padding:18px">
-          <h3>Week 1 — Foundations & Mechanics (≈ 8–10 hrs)</h3>
-          <ul class="ul">
-            <li>Lecture: Origins and forms of Obi Pele; tools & setup; casting hygiene.</li>
-            <li>Drill: 3 valid forms (Obi/4-Cowrie, Four-Cowrie, Obi Abata).</li>
-            <li>Study: 5 primary responses — semantics & probabilities; yes/probably/definitely spectrum.</li>
-            <li>Ethics: scope of practice, consent, sacred handling.</li>
-          </ul>
-          <p class="dim"><b>Zoom #1 (90 min):</b> live demo + Q&A. <br><b>Assessments:</b> Daily logs + short quiz.</p>
-        </div>
-
-        <div class="card" style="padding:18px">
-          <h3>Week 2 — Corpus, Scenarios & Interpretation (≈ 8–10 hrs)</h3>
-          <ul class="ul">
-            <li>Lecture: 9 scenario variations in Obi Abata mode; nuance and context.</li>
-            <li>Drill: Turning raw responses into client-ready language.</li>
-            <li>Workshop: Framing questions; avoiding ambiguity; reading with humility.</li>
-          </ul>
-          <p class="dim"><b>Zoom #2 (90 min):</b> practice circle with feedback. <br><b>Assessments:</b> Daily logs + case-study write-up.</p>
-        </div>
-
-        <div class="card" style="padding:18px">
-          <h3>Week 3 — Protocols, Ethics & Delivery (≈ 7–8 hrs)</h3>
-          <ul class="ul">
-            <li>Lecture: Intake flow, note-taking, documentation for certification.</li>
-            <li>Role-play: Managing expectations, difficult outcomes, referrals.</li>
-            <li>Peer Review: Swap and critique anonymized logs.</li>
-          </ul>
-          <p class="dim"><b>Zoom #3 (90 min):</b> mock readings, rubric alignment. <br><b>Assessments:</b> Daily logs + oral micro-check.</p>
-        </div>
-
-        <div class="card" style="padding:18px">
-          <h3>Week 4 — Readiness, Practicum & Ceremony (≈ 6–7 hrs)</h3>
-          <ul class="ul">
-            <li>Review: Mechanics + corpus checkpoint; final questions.</li>
-            <li><b>In-Person Practicum:</b> supervised 2–3 readings; documentation check.</li>
-            <li><b>Certification Presentation:</b> short talk on learning, ethics, and growth plan.</li>
-          </ul>
-          <p class="dim"><b>Zoom #4 (90 min):</b> final prep & oral/written exam guidance. <br><b>Assessments:</b> Daily logs + final exam.</p>
+    <section id="gallery">
+      <h2>Image Gallery</h2>
+      <div class="card" style="padding:12px">
+        <div class="gallery">
+          <img src="obi1.jpg" alt="Obi Pele image 1">
+          <img src="obi2.jpg" alt="Obi Pele image 2">
+          <img src="obi3.jpg" alt="Obi Pele image 3">
+          <img src="obi4.gif" alt="Obi Pele image 4">
         </div>
       </div>
-
-      <section id="requirements">
-        <div class="card" style="padding:18px">
-          <h2>Requirements & Assessments</h2>
-          <table aria-label="Requirements table">
-            <thead>
-              <tr><th>Component</th><th>Details</th><th>Evidence</th></tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Daily Casting Logs</td>
-                <td>28 consecutive days; 7–12 casts/day; complete fields</td>
-                <td>Shared sheet + weekly spot-checks</td>
-              </tr>
-              <tr>
-                <td>Weekly Zooms</td>
-                <td>4 × 90-min sessions (attendance required; recordings available)</td>
-                <td>Attendance record + participation</td>
-              </tr>
-              <tr>
-                <td>Quizzes & Case Study</td>
-                <td>Short quizzes (Weeks 1–2); 1 written case study (Week 2)</td>
-                <td>Scores ≥ 80% (quizzes); pass case study</td>
-              </tr>
-              <tr>
-                <td>Oral/Written Exam</td>
-                <td>Mechanics, corpus, ethics, delivery (Week 4)</td>
-                <td>Pass (≥ 80%)</td>
-              </tr>
-              <tr>
-                <td>In-Person Practicum</td>
-                <td>2–3 supervised readings; feedback rubric</td>
-                <td>Meets/Exceeds on rubric</td>
-              </tr>
-              <tr>
-                <td>Certification Talk</td>
-                <td>5–8 min presentation on insights & next steps</td>
-                <td>Completed talk + reflection</td>
-              </tr>
-            </tbody>
-          </table>
-          <p class="note">Certification is awarded upon successful completion of all components and academic integrity review. Program aligns with SwamiG Institute Divination Program tiers. </p>
-        </div>
-      </section>
-
-      <section id="policies">
-        <div class="card" style="padding:18px">
-          <h2>Materials, Access & Policies</h2>
-          <ul class="ul">
-            <li><b>Materials:</b> Obi Pele (Clink) set; notebook; stable surface for casting.</li>
-            <li><b>Access:</b> Cohort portal for templates (log sheet, case study), replays, and handouts.</li>
-            <li><b>Make-ups:</b> One Zoom absence allowed with replay + reflection submission.</li>
-            <li><b>Academic Integrity:</b> Original logs only; no fabricated entries.</li>
-            <li><b>Respect & Ethics:</b> Uphold sacred practice; no exploitation; observe confidentiality.</li>
-          </ul>
-        </div>
-      </section>
     </section>
 
     <section id="apply">
       <div class="card" style="padding:18px">
         <h2>Apply / Enroll</h2>
-        <p class="dim">Cohort size is limited. After you submit, you’ll receive dates, payment options, and your cohort portal link.</p>
         <form action="https://formspree.io/f/your-form-id" method="POST">
-          <div class="grid cols-2">
-            <label>Full Name<br><input name="name" required style="width:100%;padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.04);color:#fff"></label>
-            <label>Email<br><input name="email" type="email" required style="width:100%;padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.04);color:#fff"></label>
-          </div>
-          <label style="display:block;margin-top:10px">Brief Intent (why this course?)<br>
-            <textarea name="intent" rows="4" required style="width:100%;padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.04);color:#fff"></textarea>
-          </label>
-          <div style="margin-top:12px;display:flex;gap:12px;align-items:center">
-            <button class="btn" type="submit">Submit Application</button>
-            <span class="note">Questions? <a href="mailto:Baba@SwamiGInstitute.com">Baba@SwamiGInstitute.com</a></span>
-          </div>
+          <label>Full Name<br><input name="name" required style="width:100%;padding:10px"></label><br><br>
+          <label>Email<br><input name="email" type="email" required style="width:100%;padding:10px"></label><br><br>
+          <button class="btn" type="submit">Submit Application</button>
         </form>
+        <h3 style="margin-top:20px">Payment Options</h3>
+        <p>
+          💳 <a href="https://www.paypal.com/ncp/payment/5M949GKNMDHJN" target="_blank">Pay via PayPal</a><br>
+          💵 <a href="https://cash.app/$DrSwamiG" target="_blank">Pay via CashApp ($DrSwamiG)</a>
+        </p>
       </div>
     </section>
 
     <footer class="foot">
-      SwamiG Institute — Ifá • Isésé • Orisha • © 2025<br>
-      Light credit: lineage glow <span style="background:var(--accent-lineage);padding:0 6px;border-radius:8px;color:#0b0b0f"> </span> · Support: <a href="mailto:Baba@SwamiGInstitute.com">Baba@SwamiGInstitute.com</a>
+      SwamiG Institute — Ifa · Isese · Orisha — ©2025<br>
+      PayPal: <a href="https://www.paypal.com/ncp/payment/5M949GKNMDHJN">paypal.me/swamiginstitute</a><br>
+      CashApp: <a href="https://cash.app/$DrSwamiG">$DrSwamiG</a><br>
+      Contact: <a href="mailto:Baba@SwamiGInstitute.com">Baba@SwamiGInstitute.com</a>
     </footer>
   </main>
 </body>
