--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0b0b0f" />
   <meta name="color-scheme" content="dark" />
-  <title>SwamiG Institute — Mini 4-Week Obi Pele (Clink) Certification | 30+ Hours</title>
+  <title>SwamiG Institute — Mini 4-Week Obi Pele (Clink) Certification | 30+ Hours| baba@swamigInstitute.com </title>
   <meta name="description" content="Mini 4-week, 30+ hour Obi Pele (Clink) certification with daily casting logs, weekly Zooms, an in-person practicum, and a certification ceremony.">
   <style>
     :root{--bg:#0b0b0f;--ink:#eaeaf2;--muted:#b5b5c4;--accent:#bb66ff;--radius:20px;--shadow:0 10px 30px rgba(0,0,0,.35)}
@@ -60,7 +60,7 @@
   <header>
     <div class="bar">
       <div class="brand">
-        <img src="SwamiG.gif" alt="SwamiG Institute logo">
+        <img src="swamiginstitute.com/SwamiG.gif" alt="SwamiG Institute logo">
         <div class="title">SwamiG Institute</div>
       </div>
       <nav>
